log
Fri, May 16, 2025  9:39:46 PM: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Fri, May 16, 2025  9:42:34 PM: 
 tests:  0|5
total_score: 0/70
c39f1b2
Fri, May 16, 2025  9:48:57 PM: 
 sudoku.c | 33 ++++++++++++++++++++++++++++++++-
 1 file changed, 32 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'is_valid':
sudoku.c:48:22: error: invalid initializer
   48 |     int numRep[10] = 0;
      |                      ^
sudoku.c:58:22: error: invalid initializer
   58 |     int numRep[10] = 0;
      |                      ^
sudoku.c:68:22: error: invalid initializer
   68 |     int numRep[10] = 0;
      |                      ^
sudoku.c:72:18: error: invalid type argument of '->' (have 'int')
   72 |       int num = n->sudo[n][j];
      |                  ^~
sudoku.c:71:11: warning: variable 'j' set but not used [-Wunused-but-set-variable]
   71 |       int j = 3 * (i % 3) + (k % 3);
      |           ^
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
9109072
Fri, May 16, 2025  9:49:42 PM: 
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'is_valid':
sudoku.c:48:22: error: invalid initializer
   48 |     int numRep[10] = 0;
      |                      ^
sudoku.c:58:22: error: invalid initializer
   58 |     int numRep[10] = 0;
      |                      ^
sudoku.c:68:22: error: invalid initializer
   68 |     int numRep[10] = 0;
      |                      ^
sudoku.c:72:18: error: invalid type argument of '->' (have 'int')
   72 |       int num = n->sudo[n][j];
      |                  ^~
sudoku.c:71:11: warning: variable 'j' set but not used [-Wunused-but-set-variable]
   71 |       int j = 3 * (i % 3) + (k % 3);
      |           ^
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
95939e3
Fri, May 16, 2025  9:50:30 PM: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'is_valid':
sudoku.c:58:24: error: expected '}' before ';' token
   58 |     int numRep[10] = {0;
      |                      ~ ^
sudoku.c:67:3: error: expected ',' or ';' before 'for'
   67 |   for(int i = 0; i < 0; i++){
      |   ^~~
sudoku.c:67:18: error: 'i' undeclared (first use in this function)
   67 |   for(int i = 0; i < 0; i++){
      |                  ^
sudoku.c:67:18: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:67:28: error: expected ';' before ')' token
   67 |   for(int i = 0; i < 0; i++){
      |                            ^
      |                            ;
sudoku.c:67:28: error: expected statement before ')' token
sudoku.c:72:18: error: invalid type argument of '->' (have 'int')
   72 |       int num = n->sudo[n][j];
      |                  ^~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
6cd3c75
Fri, May 16, 2025  9:51:22 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'is_valid':
sudoku.c:72:18: error: invalid type argument of '->' (have 'int')
   72 |       int num = n->sudo[n][j];
      |                  ^~
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cd3928b
Fri, May 16, 2025  9:52:43 PM: 
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'is_valid':
sudoku.c:72:18: error: invalid type argument of '->' (have 'int')
   72 |       int num = n->sudo[n][j];
      |                  ^~
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
7237218
